test: final Ear-VoM

--- a/_posts/2024-12-07-Ear-VoM.md
+++ b/_posts/2024-12-07-Ear-VoM.md
@@ -366,6 +366,15 @@ DF의 주요 hyper parameter는 아래와 같이 세팅하였다.
 - learning-rate =  0.002
 - temperature = 0.5
 
+
+이 setting에서는 추가적인 실험으로 경량화 기법 중 하나인 pruning을 적용해보았다. DF의 layer 중 1d conv layer에 적용하였다.
+
+```python
+import torch.nn.utils.prune as prune
+prune.random_unstructured(module, name="weight", amount=0.2)
+```
+
+
 #### FL Setting
 
 raw feature와 w2v feature 모두 실험하였다. 
