test: final Ear-VoM

--- a/_posts/2024-12-07-Ear-VoM.md
+++ b/_posts/2024-12-07-Ear-VoM.md
@@ -12,7 +12,7 @@ use_math: true
 
 2024년 2학기 18기 이화여자대학교 미래혁신센터의 [도전학기제](https://future.ewha.ac.kr/future/operating-program/introduce02.do) 프로그램에 선발되어 *딥보이스 보이스피싱 범죄 근절을 위한 애플리케이션 탑재용 인공지능 모델 개발*이라는 주제로 개인 프로젝트를 진행하였다.
 
-프로젝트의 주요 성취 실적은 다음과 같다.
+프로젝트의 주요 성취(실적)는 다음과 같다.
 - 1️⃣ **First Korean SV2TTS Implementation**: [Github](https://github.com/sml09181/Korean-SV2TTS)
 - 2️⃣ **Proposal & Implementation of Deepvoice Detection w/ Federated Learning**: [Github](https://github.com/sml09181/Deepvoice-Detection-FL)
 	- Using Deep-Fingerprinting(DF) Model
