feat: tables in Ear-VoM

--- a/_posts/2024-12-07-Ear-VoM.md
+++ b/_posts/2024-12-07-Ear-VoM.md
@@ -17,6 +17,7 @@ use_math: true
 - 2️⃣ **Proposal & Implementation of Deepvoice Detection w/ Federated Learning**: [Github](https://github.com/sml09181/Deepvoice-Detection-FL)
 	- Using Deep-Fingerprinting(DF) Model
 	- Convert TensorFlow Code to PyTorch (DF)
+	- Apply unstrctured pruning
 - 3️⃣ **Proposal of Ear-VoM system**: [Github](https://github.com/sml09181/Ear-VoM)
 	- Research paper submission
 	- Experiment on the importance of considering *emotion* in the construction of a deep voice discrimination dataset (d-vector)
@@ -260,6 +261,14 @@ Epoch 7로 설정해두고, log를 보면서 loss의 변화를 관찰하였다. 
 {| Epoch: 1/7 (6500/52794) | Loss: 0.5105 | 1.4 steps/s | Step: 326k | }Input at step 326500:     ?~___
 ```
 
+#### Result
+
+![step-1000-mel-spectrogram_sample_1](https://github.com/user-attachments/assets/6bf2725b-a8bc-423b-beb1-35bc6130faf9)
+![step-61500-mel-spectrogram_sample_1](https://github.com/user-attachments/assets/1d00791e-77a9-4083-bf98-40ecfb29be95)
+
+Vocoder 학습에 사용할 Synthesizer 가중치의 step을 정할 때 loss가 감소하다가 증가하는 상황을 고려하였다. 위 이미지들은은 각각 학습 초기인 1000 step과, 채택된 61500 step 때, 하나의 sample을 임의로 고
+른 후 정답과 Synthesizer이 생성해 낸 Mel-spectrogram의 모습이다. 왼쪽은 아직 학습이 덜 되어 Mel-spectrogram이 세분화되지 않고 뭉뚱그려져 있다. 반면 오른쪽은 정답 Mel-spectrogram과 거의 흡사하다. 
+
 ### STEP3: Vocoder
 
 #### Brief Explanation
@@ -285,7 +294,9 @@ vocoder training의 log 기록 중 일부는 아래와 같다.
 
 
 ### Demo result analysis
-Synthesizer, Vocoder에 비해 Encoder는 충분히 학습시켜서 zero-shot inference에서도 화자의 특성(음색) 등을 잘 잡아내는 것을 확인할 수 있었다. 하지만 Synthesizer, Vocoder는 합성 능력이 뛰어나지는 않았다. 모든 데이터를 다 사용하지 못하였고, 학습 시간이 부족했기 때문이다. 
+
+완성된 SV2TTS에 자신의 목소리를 참조 음성으로 넣어, 자신의 목소리로 입력한 텍스트를 읽는 음성을 생성하는 데모 영상을 녹화하였다. 출력 화면 중 진한 분홍색 글씨가 자막 역할을 한다. 이화여자대학교의 [교육 목적](https://www.ewha.ac.kr/ewha/intro/object.do)을 직접 읽어 녹음했다. 길이는 14초 남짓
+이다. ‘강아지 고양이.’, ‘오늘은 수요일입니다.’, ‘도와주세요.’의 세 개의 텍스트를 읽는 음성 파일을 생성하였다. 합성된 음성을 들어보면, 참조 음성의 음색(Encoder)을 매우 잘 반영한다는 걸 알 수 있다. 합성 품질도 나쁘지 않다. 다만 감정이나 발화 속도 등을 조절할 수 없어, 사람만큼 자연스럽지 않다. 하지만 ExpressiveTTS가 아닌 일반 TTS인 것을 고려하면 꽤 괜찮은 결과를 내었다. 데모 영상은 따로 공개하지 않는다.
 
 ### Reference
 - baseline: [CorentinJ/Real-Time-Voice-Cloning](https://github.com/CorentinJ/Real-Time-Voice-Cloning)
@@ -298,17 +309,16 @@ Synthesizer, Vocoder에 비해 Encoder는 충분히 학습시켜서 zero-shot in
 ### Project Structure
 ```
 DETECT
-├── preprocess			# preprocess raw data
-├── non_fl				# traditional classification
-├── fl					# federated learning with flwr
-│   ├── dvd					# DeepVoice Detection
+├── preprocess          # preprocess raw data
+├── non_fl		# traditional classification with DF
+├── fl			# federated learning with flwr
+│   ├── dvd		# DeepVoice Detection
 │   │	├── __init__.py
 │   │	├── client_app.py   # Define ClientApp
 │   │	├── server_app.py   # Define ServerApp
 │   |	└── task.py         # Define model, training and data loading
-│	├── pyproject.toml      # Project metadata like dependencies and configs
-│	└── README.md
-
+│   └── pyproject.toml      # Project metadata like dependencies and configs
+└── README.md
 ```
 
 ### Dataset
@@ -334,6 +344,7 @@ $ python preprocess.py
 ```
 ### DF
 Deepvoice detection task에서는 주로 transformer, Wav2Vec, MLP가 쓰인다. 그중에서 Deepvoice detection model은 1d CNN 기반인 Deep-Fingerprinting([DF](https://dl.acm.org/doi/10.1145/3243734.3243768))을 선택하였다. 이 모델을 선택한 이유는 크게 두 가지이다. 첫 번째는 DF가 Website Fingerprinting에서 매우 강력하기 때문에 이진 분류 역시 잘 할 것이라 판단했기 때문이다. 두 번째 이유는 기존에 자주 사용되는 모델보다 DF가 더 deep하기 때문에 경량화를 진행할 수 있기 때문이다. 학습을 위해 경량화를 적용해보고 싶었다.
+[DF 공식 레퍼지토리](https://github.com/deep-fingerprinting/df)와 [NetCLR] 코드(https://github.com/SPIN-UMass/Realistic-Website-Fingerprinting-By-Augmenting-Network-Traces/blob/main/artifacts/src/NetCLR/pre-training.ipynb)를 참고하였다. 
 
 <img width="367" alt="image" src="https://github.com/user-attachments/assets/d1ca8739-240f-4998-8bbb-7855e30f09dd">
 
@@ -371,7 +382,10 @@ DF의 주요 hyper parameter는 아래와 같이 세팅하였다.
 
 ```python
 import torch.nn.utils.prune as prune
-prune.random_unstructured(module, name="weight", amount=0.2)
+for name, module in model.named_modules():
+	if isinstance(module, torch.nn.Conv2d) or isinstance(module, torch.nn.Linear):
+		prune.l1_unstructured(module, name='weight', amount=prune_amount)
+		prune.l1_unstructured(module, name='bias', amount=prune_amount)
 ```
 
 
@@ -401,14 +415,12 @@ to see more information about memory usage on this node, use `ray logs raylet.ou
 ### Result
 
 #### Non-FL Setting
-test accuracy 결과는 다음과 같다. 
+딥보이스 판별에서 DF 자체의 성능(test accuracy, 단위: %)은 아래 표와 같았다. ‘*’표시는 50 epoch가 아닌 21 epoch까지 진행했을 때 best validation accuracy를 나타낸다. 80K 기준 1개의 epoch에는 아래 log 기록과 같이 12시간이 소요된다.
 
 |     | 5K      | 10K     | 50K              | 80K              |
 |-----|---------|---------|------------------|------------------|
-| raw | 95.8661 | 96.7115 | 99.5950 (halted) | 99.6348 (halted) |
-| w2v | 96.3160 | 96.8123 | 99.4011 (halted) | 99.5239 (halted) |
-
-`halted` 표시는 시간 부족으로 모든 epoch를 모두 돌지 못했다는 표시이며, best valid accuracy로 대신 기입하였다. raw의 `halted`가 w2v보다 이틀 정도 더 학습하였다. 80K 기준 1개의 epoch에는 아래 log 기록과 같이 12시간이 소요된다.
+| raw | 95.8661 | 96.7115 | *99.5950 | *99.6348 |
+| w2v | 96.3160 | 96.8123 | *99.5206 | *99.6585 |
 
 ```
 2024-12-07 09:38:17,033 - root - INFO - [Epoch 16/50]
@@ -419,12 +431,35 @@ test accuracy 결과는 다음과 같다.
 2024-12-07 21:03:38,111 - root - INFO - Evaluation - loss: 0.013456 acc: 99.6284%
 ```
 
-온전히 비교할 수 있는 5K와 10K만 보았을 때, w2v가 근소하지만 raw보다 더 좋은 성능을 내는 것을 확인할 수 있다. 데이터셋 크기가 작을수록 w2v feature가 더 크게 성능을 향상시켰다. 하지만 w2v extract하는 overhead에 비해 유의미한 성능 향상을 가져오지는 않았다. 
+w2v가 근소하지만 raw보다 더 좋은 성능을 낸다. 데이터셋 크기가 작을수록 w2v feature가 더 크게 
+성능을 향상시켰다. 하지만 w2v extract하는 overhead에 비해 유의미한 성능 향상을 가져오지는 않았다.
 
+추가적인 실험으로 경량화 기법 중 하나인 unstructured pruning을 적용해보았다. DF의 입력 차원을 5000으로 고정시키고 나머지는 Non-FL Setting에서의 실험과 동일하게 했
+을 때 best validation accuarcy(단위: %) 결과는 아래 표와 같다.
+
+
+|     | non-pruning | pruning |
+|-----|---------|---------|
+| raw | 96.1500 | 96.2211 |
+| w2v | 96.4462 | 96.5335 | 
+
+예상과 달리 pruning을 적용했을 때 근소하지만 더 높은 성능이 나왔다. 이는 실험한 데이터셋의 복잡함
+이 DF가 지원하는 것보다 간단했음을 시사한다.
 
 #### FL Setting
 
-각 feature에서의 summary는 다음과 같다. 
+실험에 사용된 연합학습 방식은 FedAvg로, 연합학습의 근간이 된다. 또한 연합학습 framework인 Flower를 적용하였다. FL Framework를 처음 다뤄보는 것이기 때문에 Flower에서 제공하는 Tutorial을 따라 하며 공부하였다. 다만 Flower api에 대한 resource가 거의 없었다는 Custom dataset 사용이 있었다. 2d numpy array를 사용하려 하는데, 관련한 공식 페이지에서는 1d numpy array를, 더 이상 지원하지 않는 메서드로 설명하고 있었다. 다행히 Flower official page와 연결된 huggingface의 dataset load 방식을 이용하여 해결하였다. raw feature와 w2v feature 모두 실험하였다. 기존 목표는 동일 조건에서 non-FL setting과 FL setting의 성능 차이를 비교하는 것이었으나, OOM error로 인해 non-FL setting보다 데이터셋 크기와 batch size를 낮춰야만 했다. 추후 FL setting을 non-FL setting에 맞춰서 규모를 줄여 다시 실험하였다.
+따라서 입력 차원을 5000으로 고정하였고, sample 수는 random으로 50000개로 줄였다. 주요 hyper parameter는 다음와 같다. num-server-rounds는 10, fraction-evaluate는 0.5, local-epochs는 3, learning-rate는 0.001, batch-size는 16, num-supernodes는 8로 설정하였다. non-FL setting은 이를 고려하여 test set 비율을 50%로, epoch를 30으로 변경하였다. 비슷하게 조건을 맞췄지만, 동일하게는 맞출 수 없다. test accuracy(단위: %)은 아래 표와 같다
+
+|     | non-FL |  FL |
+|-----|---------|---------|
+| raw | 93.1800 | 87.1 |
+| w2v | 93.3400 | 88.84 | 
+
+연합학습 방식은 프라이버시 보호의 장점이 있지만, 각 클라이언트에서의 데이터 불균형 등의 문제로 상대적으로 성능이 낮다는 단점이 있다. 이 실험에서는 연합학습으로 scratch부터 학습했기 때문에 성능 차이가 더 벌어졌다. 하지만 실제 애플리케이션에서 사용할 때는 중앙 서버를 미리 학습시키고, 클라이언트가 이 가중치로부터 학습을 시작하면 높은 성능 개선을 보일 것이다.
+
+
+추가적으로, 각 feature에서의 summary는 다음과 같다. 
 
 - raw
 	```
@@ -491,6 +526,7 @@ terminal에서는 아래와 같이 보인다. 각 client와 server가 계속 소
 - baseline: [DF official implementation (Tensorflow)](https://github.com/deep-fingerprinting/df)
 - baseline: [Flower quickstart-pytorch](https://github.com/adap/flower/tree/main/examples/quickstart-pytorch)
 - [NetCLR](https://github.com/SPIN-UMass/Realistic-Website-Fingerprinting-By-Augmenting-Network-Traces/blob/main/artifacts/src/NetCLR/pre-training.ipynb)
+- [Unstructured Pruning](https://github.com/jhson989/pytorch-pruning-basic)
 - [Flower Dataset](https://flower.ai/docs/datasets/how-to-use-with-local-data.html)
 - [Flower Tutorials 1~5](https://flower.ai/docs/framework/tutorial-series-what-is-federated-learning.html)
 
