--- a/_posts/2024-12-07-Ear-VoM.md
+++ b/_posts/2024-12-07-Ear-VoM.md
@@ -378,7 +378,7 @@ DF의 주요 hyper parameter는 아래와 같이 세팅하였다.
 - temperature = 0.5
 
 
-이 setting에서는 추가적인 실험으로 경량화 기법 중 하나인 pruning을 적용해보았다. DF의 layer 중 1d conv layer에 적용하였다.
+이 setting에서는 추가적인 실험으로 경량화 기법 중 하나인 pruning을 적용해보았다. DF의 layer 중 1d conv layer에 적용하였다. [jhson989/pytorch-pruning-basic](https://github.com/jhson989/pytorch-pruning-basic) 레파지토리를 참고하였다.
 
 ```python
 import torch.nn.utils.prune as prune
